--- v3.2 (2018-xx-xx) ---
* Add new packages: libusb, pciutils, sysfsutils, udev, usbutils.
* Add `make all` target: build all available packages.
* Add support of AstraLinux 1.5 [amd64] (static and shared).
* Update in all static configs:
  - OPENSSL_VER from 1.0.2n to 1.0.2o

--- v3.1 (2018-03-21) ---
* Delete package: vlc.
* Add new package: libsignal-protocol-c.
* Add possibility to build manually selected list of static libraries in
  environments with shared libraries. See STATIC_PKG_LIST in settings.sh.
* Add USE_JPEG_TURBO variable to all configs: set it to "true" for using of
  libjpeg-turbo library instead of jpeg library.
* Add update-checksums-database.sh tool.
* Add patch to fix installation of shared library from package mxml.
* Add patch for sqlite package: enable extra function into SQLite API which is
  used by latest versions of Qt 5.x and is required for building of qtbase
  package in a shared libraries mode.
* Add patch for "make" package: add support of GLIBC glob interface version 2.
* Update configuration options in opencv package.
* Switch package sdl2 from autotools to cmake.
* Build package ffmpeg with x264 support.
* Update cmake toolchain file generated by package cmake-settings.
* Update in all configs:
  - FFMPEG_VER from 3.3.2 to 3.4.1
  - OPENCV_VER from 3.3.1 to 3.4.0
  - TINYXML2_VER from 4.0.1 to 6.0.0
  - PROTOBUF_VER from 3.4.0 to 3.5.1
  - OSGEARTH_VER from 2.8 to 2.9 (except AstraLinux 1.2)
  - QT5_VER from 5.10.0 to 5.10.1 (except AstraLinux 1.2)
  - SDL2_VER from 2.0.7 to 2.0.8 (except AstraLinux 1.2)
  - PROJ_VER from 4.9.3 to 5.0.0 (except AstraLinux 1.2)

--- v3.0 (2018-02-01) ---
* Add checkup of checksums for all tarballs with sources. Only size of tarballs
  was checked before.
* Add new packages: curl, tinyxml2, osgearth, freetype-stage1, harfbuzz.
* Add CheckPkgUrl() function which checks availability of tarball with library
  sources using primary and reserve URLs (PKG_URL and PKG_URL_2 accordingly).