@@ -1,10 +1,10 @@
 #!/bin/sh
 
 ### System info ###
-SYSTEM="Ubuntu-14.04-LTS_amd64_static"
+SYSTEM="Ubuntu-14.04_amd64_shared"
 ARCH=x86_64
 TARGET=${ARCH}-cross-linux-gnu
-DEFAULT_LIB_TYPE=static
+DEFAULT_LIB_TYPE=shared
 
 
 ### Build tools ###
@@ -86,44 +86,41 @@ PCIUTILS_VER=3.2.1
 USBUTILS_VER=007
 SYSFSUTILS_VER=2.1.0
 
-# LIBXML2_VER=2.9.1
-LIBXML2_VER=2.9.4
-LIBXSLT_VER=1.1.29
-EXPAT_VER=2.2.5
+LIBXML2_VER=2.9.1
+LIBXSLT_VER=1.1.28
+EXPAT_VER=2.1.0
 
 ZLIB_VER=1.2.11
 BZIP2_VER=1.0.6
 
-# LIBPNG_VER=1.2.50
-LIBPNG_VER=1.2.59
+LIBPNG_VER=1.2.50
 LIBPNG_SUBVER=12
-# JPEG_VER=8c
-JPEG_VER=9c
-JPEG_TURBO_VER=1.5.2
+JPEG_VER=8c
+JPEG_TURBO_VER=1.3.0
 USE_JPEG_TURBO=
-TIFF_VER=4.0.9
-# GIFLIB_VER=4.1.6
-GIFLIB_VER=5.1.4
+TIFF_VER=4.0.3
+GIFLIB_VER=4.1.6
 YASM_VER=1.3.0
 
-LIBGPG_ERROR_VER=1.27
-LIBGCRYPT_VER=1.8.1
+LIBGPG_ERROR_VER=1.12
+LIBGCRYPT_VER=1.5.3
 # OPENSSL_VER=1.0.1f
-OPENSSL_VER=1.0.2o
-OPENSSL_SUBVER=1.0.2
+OPENSSL_VER=1.0.1u
+OPENSSL_SUBVER=1.0.1
 
-HARFBUZZ_VER=1.7.1
+# HARFBUZZ_VER=0.9.27
+HARFBUZZ_VER=
 # FREETYPE_VER=2.5.2
-FREETYPE_VER=2.8.1
-FONTCONFIG_VER=2.12.6
+FREETYPE_VER=2.5.0
+FONTCONFIG_VER=2.11.0
 
-SQLITE_VER=3.21.0
-SQLITE_FOSSIL_VER=1a584e49
+SQLITE_VER=3.8.2
+SQLITE_FOSSIL_VER=27392118
 
 ASPELL_VER=0.60.6.1
-LIBIDN_VER=1.33
+LIBIDN_VER=1.28
 ATTR_VER=2.4.47
-CURL_VER=7.57.0
+CURL_VER=7.35.0
 
 
 ### Developer libraries ###
