@@ -10,14 +10,14 @@ CONFIGS="
         AstraLinux-1.3_shared
         AstraLinux-1.2_static
         AstraLinux-1.2_shared
-        Ubuntu-14.04-LTS_amd64_static
-        Ubuntu-14.04-LTS_amd64_shared
-        Ubuntu-14.04-LTS_i386_static
-        Ubuntu-14.04-LTS_i386_shared
+        Ubuntu-14.04_amd64_static
+        Ubuntu-14.04_amd64_shared
+        Ubuntu-14.04_i386_static
+        Ubuntu-14.04_i386_shared
         "
 
-# CONFIGS="Ubuntu-14.04-LTS_amd64_static Ubuntu-14.04-LTS_i386_static"
-# CONFIGS="Ubuntu-14.04-LTS_amd64_shared Ubuntu-14.04-LTS_i386_shared"
+# CONFIGS="Ubuntu-14.04_amd64_static Ubuntu-14.04_i386_static"
+# CONFIGS="Ubuntu-14.04_amd64_shared Ubuntu-14.04_i386_shared"
 # CONFIGS="AstraLinux-1.4_static AstraLinux-1.3_static AstraLinux-1.2_static"
 # CONFIGS="AstraLinux-1.4_shared AstraLinux-1.3_shared"
 
