@@ -2,6 +2,7 @@
 * Add new packages: libusb, pciutils, sysfsutils, udev, usbutils.
 * Add `make all` target: build all available packages.
 * Add support of AstraLinux 1.5 [amd64] (static and shared).
+* Drop "-LTS" suffix from name of Ubuntu configs.
 * Update in all static configs:
   - OPENSSL_VER from 1.0.2n to 1.0.2o
 
